--- a/src/main/resources/templates/logged.html
+++ b/src/main/resources/templates/logged.html
@@ -13,13 +13,17 @@
     <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
-<h1>Spotify Stats</h1>
-<div class="container">
-    <p>Hi, you're logged in!</p>
-    <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="/genres">Top genres</a></li>
-    </ul>
+<h1 style="text-align: center">Spotify Top Genres</h1>
+<br>
+<br>
+<div style="text-align: center">
+    <h4>Hi, you're logged in!</h4>
+    <h4>Guess you're here to see your favourite music genres based on Spotify follows?</h4>
+    <h4>Don't waste any more time then...</h4>
+    <h4>It's not like there's anything else to see here, am I right?</h4>
+    <h4>Click the link:</p></h4>
+    <h3><a href="/genres">YOUR TOP GENRES</a></h3>
+
 </div>
 <script type="text/javascript">
 </script>
