decreased number of Spotify requests, top 3 is now "max 3" not "3, unless there's a tie"

--- a/src/main/resources/templates/genres.html
+++ b/src/main/resources/templates/genres.html
@@ -22,6 +22,13 @@
         <td th:text="${genre?.getArtists()}"/>
         </p>
     </tr>
+    <h3>
+        <td th:text="${empty}"/>
+    </h3>
+    <h3>
+        <td th:text="${notAll}"/>
+    </h3>
+    </tr>
 
 </div>
 </body>
