--- a/src/main/resources/templates/genres.html
+++ b/src/main/resources/templates/genres.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:display="http://www.w3.org/1999/xhtml">
 <head>
     <title>Your 3 Top Genres</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -10,10 +10,14 @@
 
 <div style="text-align: center">
     <h2>Your 3 Top Genres:</h2>
+
+
+    <!-- 1 -->
+
     <tr
-            th:each="genre, iStat : ${genres}">
+            th:each="genre, iStat : ${topGenre1}" th:if="${iStat.index == 0}">
         <h1>
-            <td th:text="${iStat?.count}"/>
+            <td th:text="1"/>
         </h1>
         <h3>
             <td th:text="${genre?.getGenreName()}"/>
@@ -22,6 +26,91 @@
         <td th:text="${genre?.getArtists()}"/>
         </p>
     </tr>
+
+    <input type="button" value="Show ties" class="btn" name="btn_ties1" th:hidden="${#lists.size(topGenre1) &lt; 2}"
+           onclick="show1()"/>
+    <div id="div1" style="display: none">
+        <tr
+                th:each="genre, iStat : ${topGenre1}" th:if="${iStat.index > 0}">
+
+
+            <h2>
+                <td th:text="${genre?.getPlace()}"/>
+            </h2>
+            <h3>
+                <td th:text="${genre?.getGenreName()}"/>
+            </h3>
+            <p>
+            <td th:text="${genre?.getArtists()}"/>
+            </p>
+        </tr>
+    </div>
+
+    <!-- 2 -->
+
+    <tr
+            th:each="genre, iStat : ${topGenre2}" th:if="${iStat.index == 0}">
+        <h1>
+            <td th:text="${genre?.getPlace()}"/>
+        </h1>
+        <h3>
+            <td th:text="${genre?.getGenreName()}"/>
+        </h3>
+        <p>
+        <td th:text="${genre?.getArtists()}"/>
+        </p>
+    </tr>
+
+    <input type="button" value="Show ties" class="btn" name="btn_ties2" th:hidden="${#lists.size(topGenre2) &lt; 2}"
+           onclick="show2()"/>
+    <div id="div2" style="display: none">
+        <tr
+                th:each="genre, iStat : ${topGenre2}" th:if="${iStat.index > 0}">
+
+            <h3>
+                <td th:text="${genre?.getGenreName()}"/>
+            </h3>
+            <p>
+            <td th:text="${genre?.getArtists()}"/>
+            </p>
+        </tr>
+    </div>
+
+    <!-- 3 -->
+
+    <tr
+            th:each="genre, iStat : ${topGenre3}" th:if="${iStat.index == 0}">
+        <h1>
+            <td th:text="3"/>
+        </h1>
+        <h3>
+            <td th:text="${genre?.getGenreName()}"/>
+        </h3>
+        <p>
+        <td th:text="${genre?.getArtists()}"/>
+        </p>
+    </tr>
+
+    <input type="button" value="Show ties" class="btn" name="btn_ties3" th:hidden="${#lists.size(topGenre3) &lt; 2}"
+           onclick="show3()"/>
+    <div id="div3" style="display: none">
+        <tr
+                th:each="genre, iStat : ${topGenre3}" th:if="${iStat.index > 0}">
+
+
+            <h2>
+                <td th:text="3"/>
+            </h2>
+            <h3>
+                <td th:text="${genre?.getGenreName()}"/>
+            </h3>
+            <p>
+            <td th:text="${genre?.getArtists()}"/>
+            </p>
+        </tr>
+    </div>
+    <br>
+    <br>
     <h3>
         <td th:text="${empty}"/>
     </h3>
@@ -29,6 +118,36 @@
         <td th:text="${notAll}"/>
     </h3>
     </tr>
+    <script>
+
+        function show1() {
+            var x = document.getElementById("div1");
+            if (x.style.display === "none") {
+                x.style.display = "block";
+            } else {
+                x.style.display = "none";
+            }
+        }
+
+        function show2() {
+            var x = document.getElementById("div2");
+            if (x.style.display === "none") {
+                x.style.display = "block";
+            } else {
+                x.style.display = "none";
+            }
+        }
+
+        function show3() {
+            var x = document.getElementById("div3");
+            if (x.style.display === "none") {
+                x.style.display = "block";
+            } else {
+                x.style.display = "none";
+            }
+        }
+    </script>
+
 
 </div>
 </body>
